fix: increase z-index of main menu container for improved stacking context

--- a/src/components/Navbar/MobileNavbar.scss
+++ b/src/components/Navbar/MobileNavbar.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  z-index: 100;
+  z-index: 1000;
 
   .logo {
     width: clamp(50px, 12vw, 150px);
